hcc/tests/conform/errors/sema/assign_to_non_lvalue.hc
//@ error: is not an lvalue
#include <stdlib.hh>
U0 Main()
{
  Main = 1;
}
